add group controller, repository, service, mapper

--- a/backend/src/main/resources/i18n/messages.properties
+++ b/backend/src/main/resources/i18n/messages.properties
@@ -1,3 +1,4 @@
 user.name.notBlank=Name darf nicht leer sein
 user.email.notBlank=E-Mail darf nicht leer sein
 user.email.invalid=Ungültige E-Mail-Adresse
+group.name.notBlank=Name darf nicht leer sein
