--- a/backend/src/main/resources/i18n/messages_en.properties
+++ b/backend/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,4 @@
 user.name.notBlank=Name must not be empty
 user.email.notBlank=Email must not be empty
 user.email.invalid=Invalid email address
+group.name.notBlank=Name must not be empty
