--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1,10 +1,11 @@
 {
+  "app_name": "Our Expenses",
   "add_user": "Add User",
   "list_user": "List of Users",
   "delete": "Delete",
   "add": "Add",
   "placeholder_name": "Name",
   "placeholder_email": "name@example.com",
-  "no_users_available": "No usrers found",
+  "no_users_available": "No users found",
   "error": "Error"
 }
