--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -5,12 +5,14 @@
   "delete": "Delete",
   "add": "Add",
   "placeholder_name": "Name",
-  "placeholder_email": "name@example.com",
+  "placeholder_group_name" : "Group name",
   "no_users_available": "No users found",
   "no_groups_available": "No groups found",
   "error": "Error",
   "nav_users": "Users",
   "nav_groups": "Groups",
   "nav_manage_groups" : "Manage Groups",
-  "leave_group" : "Leave group"
+  "leave_group" : "Leave group",
+  "rename_group" : "Rename group",
+  "show_group_info": "Show infos"
 }
