use translation, handle errors, update styling

--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -7,6 +7,7 @@
   "add": "Hinzufügen",
   "placeholder_name": "Name",
   "placeholder_group_name": "Gruppenname",
+  "placeholder_group_code": "Gruppencode",
   "no_users_available": "Keine User gefunden",
   "no_groups_available": "Keine Gruppen gefunden",
   "error": "Fehler",
@@ -16,6 +17,7 @@
   "nav_my_groups" : "Meine Gruppen",
   "leave_group" : "Gruppe verlassen",
   "rename_group" : "Gruppe umbenennen",
+  "assign_group" : "Gruppe beitreten",
   "show_group_info": "Infos anzeigen",
   "group_info": "Gruppeninformationen",
   "ok": "Ok",
