--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,9 @@
 1. DB Daten auslagern
 2. github Aktions für build und deployment
-3. Splashscreen mit Logo aus ChatGPT
-4. Android files ins Projekt in unterordner legen und pushen
+3. Splashscreen mit Logo aus ChatGPT => DONE
+4. Android files ins Projekt in unterordner legen und pushen => DONE
+5. Group Endpunkte implementieren => DONE
+6. Fehler beim booten des BE analysieren => DONE
+7. FE für Group => DONE
+8. Liquibase hinzufügen => DONE
+9. Expenses FE + BE
