--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -6,8 +6,8 @@
   "delete": "Löschen",
   "add": "Hinzufügen",
   "placeholder_name": "Name",
-  "placeholder_group_name": "Gruppenname",
-  "placeholder_group_code": "Gruppencode",
+  "placeholder_group_name": "Gruppenname zum Erstellen",
+  "placeholder_group_code": "Gruppencode zum Beitreten",
   "no_users_available": "Keine User gefunden",
   "no_groups_available": "Keine Gruppen gefunden",
   "error": "Fehler",
@@ -21,5 +21,8 @@
   "show_group_info": "Infos anzeigen",
   "group_info": "Gruppeninformationen",
   "ok": "Ok",
-  "info": "Infos"
+  "info": "Infos",
+  "start": "Los geht´s!",
+  "start_info": "Möchtest du eine neue Gruppe erstellen oder einer bestehenden Gruppe beitreten?",
+  "no_users_in_group": "Es wurden noch keine Mitglieder zu dieser Gruppe hinzugefügt."
 }
