--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -25,5 +25,6 @@
   "start": "Los geht´s!",
   "start_info": "Möchtest du eine neue Gruppe erstellen oder einer bestehenden Gruppe beitreten?",
   "no_users_in_group": "Eswurden noch keine Mitglieder zu dieser Gruppe hinzugefügt.",
-  "no_groups_found" : "Es wurden noch keine Gruppen angelegt"
+  "no_groups_found" : "Es wurden noch keine Gruppen angelegt",
+  "add_expense": "Ausgabe hinzufügen"
 }
