--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -6,8 +6,8 @@
   "delete": "Löschen",
   "add": "Hinzufügen",
   "placeholder_name": "Name",
-  "placeholder_group_name": "Gruppenname zum Erstellen",
-  "placeholder_group_code": "Gruppencode zum Beitreten",
+  "placeholder_group_name": "Gruppe erstellen",
+  "placeholder_group_code": "Gruppe beitreten",
   "no_users_available": "Keine User gefunden",
   "no_groups_available": "Keine Gruppen gefunden",
   "error": "Fehler",
@@ -26,5 +26,6 @@
   "start_info": "Möchtest du eine neue Gruppe erstellen oder einer bestehenden Gruppe beitreten?",
   "no_users_in_group": "Es wurden noch keine Mitglieder zu dieser Gruppe hinzugefügt.",
   "no_groups_found" : "Es wurden noch keine Gruppen angelegt",
-  "add_expense": "Ausgabe hinzufügen"
+  "add_expense": "Ausgabe hinzufügen",
+  "home": "Startseite"
 }
