add billings to frontend

--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -27,5 +27,6 @@
   "no_users_in_group": "Es wurden noch keine Mitglieder zu dieser Gruppe hinzugefügt.",
   "no_groups_found" : "Es wurden noch keine Gruppen angelegt",
   "add_expense": "Ausgabe hinzufügen",
+  "expenses_overview": "Übersicht Ausgaben",
   "home": "Startseite"
 }
