--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "app_name": "Our Expenses",
+  "app_name": "Expenses",
   "add_user": "Add User",
   "list_user": "List of Users",
   "delete": "Delete",
