--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -1,5 +1,5 @@
 {
-  "app_name": "Our Expenses",
+  "app_name": "Expenses",
   "app_author": "Alexander Kiemle",
   "add_user": "Mitglied hinzufügen",
   "list_user": "Liste der User",
